--- a/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
+++ b/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
     <RootNamespace>Wba.Oefening.Games.Web</RootNamespace>
   </PropertyGroup>
 
