--- a/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
+++ b/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wba.Oefening.Games.Core\Wba.Oefening.Games.Core.csproj" />
   </ItemGroup>
 
 </Project>
